--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,8 @@
     /* margin-top: 5px; */
 }
 .jumbotron{
-    align-content: center;
+   background-image: url(https://cdn.pixabay.com/photo/2014/05/02/21/49/home-office-336373_960_720.jpg);
+   background-size: cover;
+   width: 900px;
+   height: 500px;
 }
