working on background color

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body{
+    background-color: green;
+}
+.navbar{
+    margin-bottom: 10px;
+}
 .jumbo{
     align-content: center;
     /* margin-top: 5px; */
