--- a/src/components/RepoComp/repo.css
+++ b/src/components/RepoComp/repo.css
@@ -5,7 +5,7 @@
   }
 
 .container {
-    padding: 10px;
+    padding: 15px;
 }
 .col{
     padding: 10px;
@@ -17,6 +17,11 @@
 }
 
 .carousel-container{
-    background-color: #eee;
+    background-color: #D7D9DB;
     text-align: center;
+    margin: 10px;
+}
+
+.portGenlink{
+    margin-top: 3px;
 }
