commit check point

--- a/src/components/JumbotronComp/jumbo.css
+++ b/src/components/JumbotronComp/jumbo.css
@@ -2,9 +2,9 @@
     align-content: center;
  }
 
-.jumbotron{
-    background-image: url(https://cdn.pixabay.com/photo/2014/05/02/21/49/home-office-336373_960_720.jpg);
-    background-size: cover;
-    width: 1050px;
-    height: 500px;
+.coding-picture{
+    
+    width: 950px;
+    height: 300px;
+    align-items: center;
  }
